# prediction-f1-pit-stops-kaggle-competition

./: main.py  pyproject.toml
data/: y_train.parquet
models/: model_catboost.pkl  model_histgradientboosting.pkl  model_logistic_regression.pkl
notebooks/: 1.0_exploratory_data_analysis.ipynb  2.0_feature_engineering.ipynb  3.0_lightgbm_machine_learning.ipynb  3.1_voting_machine_learning.ipynb  3.1_xgboost_machine_learning.ipynb  3.2_logistic_regression_machine_learning.ipynb  3.2_tabnet_machine_learning.ipynb  3.3_catboost_machine_learning.ipynb  3.3_nn_machine_learning.ipynb  3.4_histgradientboosting_machine_learning.ipynb  3.5_random_forest_machine_learning.ipynb  4.0_stacking_submission.ipynb  4.1_stacking_submission.ipynb  4.2_stacking_submission.ipynb
src/: catboost_tuning.py  extra_tree.py  knn_tuning.py  lightgbm.py  random_forest.py  tabnet_tuning.py
