[project]
name = "f1-pit-stop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boruta>=0.4.3",
    "catboost>=1.2.10",
    "category-encoders>=2.9.0",
    "fastparquet>=2026.3.0",
    "feature-engine>=1.9.4",
    "jupyter>=1.1.1",
    "jupyter-core>=5.9.1",
    "jupyterlab>=4.5.7",
    "lightgbm>=4.6.0",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pytorch-tabnet>=4.1.0",
    "scikit-fuzzy>=0.5.0",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
